roboshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: rabbitmq
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-dashboard
            port:
              number: 15672
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-ingress
#   namespace: argocd
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: argocd
#     traefik.ingress.kubernetes.io/router.tls: "true" # ArgoCD expects TLS
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               number: 80
# ---
# apiVersion: helm.cattle.io/v1
# kind: HelmChartConfig
# metadata:
#   name: traefik
#   namespace: kube-system
# spec:
#   valuesContent: |-
#     additionalArguments:
#       - "--entryPoints.rabbitmq.address=:15672"
#       - "--entryPoints.argocd.address=:8099"
